# bci-interface

./: .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  README.md  bci-interface.pc.cmake
application/: AdaptiveSteering.cpp  CMakeLists.txt  DynamicTraining.cpp  HUDSteering.cpp  PhysioTestInterface.cpp  SSVEPTrainingManager.cpp  SSVEPTrainingManager.h  StaticSteering.cpp
application/data/: HUDSprite.xcf
application/ssvep-training/: ssvep-training-oculus.cpp  ssvep-training.cpp
application/whack-a-mole/: WhackInterpreter.cpp  WhackInterpreter.h  whack-a-mole.cpp
etc/: ssvepinterface-config  ssvpinterface-config
gui/: ConfigUtil.cpp  ConfigUtil.h  SSVPInterfaceConfigUtility.cpp  configUtil.ui
include/: CMakeLists.txt
include/bci-interface/: BCIAPI.h  BCIInterface.h  Background.h  BackgroundSprite.h  CommandInterpreter.h  CommandOverrider.h  CommandReceiver.h  CoshellInterpreter.h  DisplayObject.h  EventHandler.h  FlickeringSquare.h  HybridInterface.h  MoovingCursor.h  P300Interface.h  P300Object.h  P300ObjectVector.h  RandomPoint.h  SSVEPInterface.h  SSVEPInterfaceConfig.h  SSVEPStimulus.h  SSVEPStimulusVector.h  SimpleInterpreter.h  TestInterface.h  VisionServerBS.h  square-function.h
include/bci-interface/Background/: BufferBG.h  StaticBG.h  VisionServerBG.h
include/bci-interface/CommandInterpreter/: CoshellInterpreter.h  HoldInterpreter.h  P300Interpreter.h  SimpleInterpreter.h
include/bci-interface/CommandInterpreter/CoshellApplications/: AdaptiveSteering.h  CupboardLookout.h  ObjectsLookout.h  StaticSteering.h
include/bci-interface/CommandReceiver/: TCPClient.h  TCPClientReceiver.h  TCPReceiver.h  UDPReceiver.h
include/bci-interface/DisplayObject/: BoxedTextObject.h  FPSCounter.h  P300Object.h  SSVEPStimulus.h  SpriteObject.h  TextObject.h
include/bci-interface/Utils/: FontManager.h  TCPClient.h  UDPServer.h  UDPSocket.h  Win32.h  square-function.h
include/ssvp-interface/: BackgroundSprite.h  FlickeringSquare.h  P300Interface.h  SSVPInterface.h  SSVPInterfaceConfig.h  square-function.h
legacy/application/: DynamicTraining.cpp  HUDSteering.cpp
legacy/include/bci-interface/Background/: VisionServerBG.h
legacy/include/bci-interface/CommandInterpreter/CoshellApplications/: AdaptiveSteering.h  CupboardLookout.h
legacy/src/Background/: VisionServerBG.cpp
legacy/src/CommandInterpreter/CoshellApplications/: AdaptiveSteering.cpp
matlab/: gen_seq.py  sfun_bcixml_paradigm.cpp  sfun_p300_interface.cpp  sfun_p300_rand_buffers.h  sfun_ssvep_trigger.cpp  sfun_ssvp_interface.cpp  sfun_stimbox_emulator.cpp  sfun_tcp_trigger.cpp  sfun_udp_command.cpp
src/: BCIInterface.cpp  BackgroundSprite.cpp  CMakeLists.txt  CommandOverrider.cpp  CoshellInterpreter.cpp  FlickeringSquare.cpp  HybridInterface.cpp  MoovingCursor.cpp  P300Interface.cpp  P300Object.cpp  P300ObjectVector.cpp  RandomPoint.cpp  SSVEPInterface.cpp  SSVEPInterfaceConfig.cpp  SSVEPStimulus.cpp  SSVPInterface.cpp  SSVPInterfaceConfig.cpp  SimpleInterpreter.cpp  TestInterface.cpp  UDPReceiver.cpp  VisionServerBS.cpp  square-function.cpp  ssvp-interface.cpp
src/Background/: BufferBG.cpp  StaticBG.cpp  VisionServerBG.cpp
src/BackgroundSprite/: VisionServerBS.cpp
src/CommandInterpreter/: CoshellInterpreter.cpp  HoldInterpreter.cpp  P300Interpreter.cpp  SimpleInterpreter.cpp
src/CommandInterpreter/CoshellApplications/: AdaptiveSteering.cpp  CupboardLookout.cpp  ObjectsLookout.cpp  StaticSteering.cpp
src/CommandReceiver/: TCPClient.cpp  TCPClientReceiver.cpp  TCPReceiver.cpp  UDPReceiver.cpp
src/DisplayObject/: BoxedTextObject.cpp  FPSCounter.cpp  P300Object.cpp  SSVEPStimulus.cpp  SpriteObject.cpp  TextObject.cpp
src/Utils/: FontManager.cpp  TCPClient.cpp  UDPServer.cpp  UDPSocket.cpp  Win32.cpp  square-function.cpp
src/private/: BCIInterfaceImpl.cpp  BCIInterfaceImpl.h
src/private/DisplayObject/: BoxedTextObjectImpl.cpp  BoxedTextObjectImpl.h  TextObjectImpl.cpp  TextObjectImpl.h
test/: CMakeLists.txt  EchoServer.cpp  testboxed-text.cpp  testfontmanager.cpp  testhybrid-interface.cpp  testoculus-interface.cpp  testp300-interface.cpp  testsquare-function.cpp  testssvep-interface.cpp  testssvep-stimuli.cpp  testssvp-interface.cpp  testtest-interface.cpp
test_procedures/: influence.cpp
