#
#  Copyright
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/cpack.cmake)

SET(PROJECT_NAME bci-interface)
SET(PROJECT_CONTACT )
SET(PROJECT_DESCRIPTION "")
SET(PROJECT_URL "")

SET(CXX_DISABLE_WERROR True)
SET(CUSTOM_HEADER_DIR bci-interface)

#SET(PROJECT_VERSION 0.1)

#
#  Specific CmakeModules
#
SETUP_PROJECT(FALSE)

#
#  Look for dependencies
#

find_package( Boost 1.40.0 COMPONENTS thread system)

IF(Boost_FOUND)
    MESSAGE(STATUS "Found Boost")
    MESSAGE(STATUS "Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS}")
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

find_package(SFML COMPONENTS graphics window system)

INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(application)

# Add dependency towards the library in the pkg-config file.
PKG_CONFIG_APPEND_LIBS("bci-interface")

PKG_CONFIG_APPEND_CFLAGS("-I${SFML_INCLUDE_DIR}")
PKG_CONFIG_APPEND_LIBS_RAW("${SFML_LIBRARIES}")

SETUP_PROJECT_FINALIZE()
SETUP_PROJECT_CPACK()
