#
#  Copyright
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/cpack.cmake)

SET(PROJECT_NAME bci-interface)
SET(PROJECT_CONTACT )
SET(PROJECT_DESCRIPTION "")
SET(PROJECT_URL "")
SET(PROJECT_VERSION 1)
PROJECT(${PROJECT_NAME} VERSION ${PROJECT_VERSION})

SET(CXX_DISABLE_WERROR True)
SET(CUSTOM_HEADER_DIR bci-interface)

IF(NOT WIN32)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
ENDIF(NOT WIN32)

#SET(PROJECT_VERSION 0.1)

#
#  Specific CmakeModules
#
SETUP_PROJECT(FALSE)

#
#  Look for dependencies
#

INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/include)

find_package( Boost 1.40.0 COMPONENTS thread system filesystem)

IF(Boost_FOUND)
    MESSAGE(STATUS "Found Boost")
    MESSAGE(STATUS "Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS}")
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

find_package(Eigen3)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

find_package(SFML COMPONENTS oculus graphics window system)

INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(application)

# Add dependency towards the library in the pkg-config file.
PKG_CONFIG_APPEND_LIBS("bci-interface")

PKG_CONFIG_APPEND_CFLAGS("-I${SFML_INCLUDE_DIR}")
PKG_CONFIG_APPEND_LIBS_RAW("${SFML_LIBRARIES}")

SETUP_PROJECT_FINALIZE()
SETUP_PROJECT_CPACK()
